--- a/2.html
+++ b/2.html
@@ -31,7 +31,7 @@
 		<!-- create menu
 		     using buttons to open a new page  -->
 		<div id="meniu" align="center">
-			<input type="button" value="B1" onclick="location.href='1.html'"> 
+			<input type="button" value="B1" onclick="location.href='index.html'"> 
 			<input type="button" value="B2" onclick="location.href='#'">
 			<input type="button" value="B3" onclick="location.href='3.html'">
 			<input type="button" value="B4" onclick="location.href='4.html'">
