--- a/3.html
+++ b/3.html
@@ -43,7 +43,7 @@
 		<!-- create menu
 		     using buttons to open a new page  -->
 		<div id="meniu" align="center">
-			<input type="button" value="B1" onclick="location.href='1.html'"> 
+			<input type="button" value="B1" onclick="location.href='index.html'"> 
 			<input type="button" value="B2" onclick="location.href='2.html'">
 			<input type="button" value="B3" onclick="location.href='#'">
 			<input type="button" value="B4" onclick="location.href='4.html'">
